--- a/tutorials/Installation_V0_1_6.ipynb
+++ b/tutorials/Installation_V0_1_6.ipynb
@@ -181,6 +181,9 @@
         "# update classy vision install to current main.\n",
         "pip uninstall -y classy_vision\n",
         "pip install classy-vision@https://github.com/facebookresearch/ClassyVision/tarball/main\n",
+        "# Update fairscale to commit compatible with vissl main.\n",
+        "!pip uninstall -y fairscale\n",
+        "!pip install fairscale@https://github.com/facebookresearch/fairscale/tarball/df7db85cef7f9c30a5b821007754b96eb1f977b6\n",
         "# install vissl dev mode (e stands for editable)\n",
         "pip install -e .[dev]\n",
         "# verify installation\n",
