--- a/tutorials/Benchmark_Linear_Image_Classification_on_ImageNet_1K_V0_1_6.ipynb
+++ b/tutorials/Benchmark_Linear_Image_Classification_on_ImageNet_1K_V0_1_6.ipynb
@@ -87,6 +87,10 @@
         "!pip uninstall -y classy_vision\n",
         "!pip install classy-vision@https://github.com/facebookresearch/ClassyVision/tarball/4785d5ee19d3bcedd5b28c1eb51ea1f59188b54d\n",
         "\n",
+        "# Update fairscale to commit compatible with v0.1.6\n",
+        "!pip uninstall -y fairscale\n",
+        "!pip install fairscale@https://github.com/facebookresearch/fairscale/tarball/df7db85cef7f9c30a5b821007754b96eb1f977b6\n",
+        "\n",
         "# install vissl dev mode (e stands for editable)\n",
         "!pip install -e .[dev]"
       ]
