--- a/files/Benchmark_Full_Finetuning_on_ImageNet_1K_V0_1_6.ipynb
+++ b/files/Benchmark_Full_Finetuning_on_ImageNet_1K_V0_1_6.ipynb
@@ -87,6 +87,10 @@
         "!pip uninstall -y classy_vision\n",
         "!pip install classy-vision@https://github.com/facebookresearch/ClassyVision/tarball/4785d5ee19d3bcedd5b28c1eb51ea1f59188b54d\n",
         "\n",
+        "# Update fairscale to commit compatible with v0.1.6\n",
+        "!pip uninstall -y fairscale\n",
+        "!pip install fairscale@https://github.com/facebookresearch/fairscale/tarball/df7db85cef7f9c30a5b821007754b96eb1f977b6\n",
+        "\n",
         "# install vissl dev mode (e stands for editable)\n",
         "!pip install -e .[dev]"
       ]
@@ -803,7 +807,7 @@
             "Python               3.7.12 (default, Sep 10 2021, 00:21:48) [GCC 7.5.0]\n",
             "numpy                1.19.5\n",
             "Pillow               7.1.2\n",
-            "vissl                0.1.5 @/content/vissl/vissl\n",
+            "vissl                0.1.6 @/content/vissl/vissl\n",
             "GPU available        True\n",
             "GPU 0                Tesla K80\n",
             "CUDA_HOME            /usr/local/cuda\n",
