chore: updated a header and added SimCLR checkpoint links

--- a/tutorials/Using_a_pretrained_model_for_inference_V0_1_6.ipynb
+++ b/tutorials/Using_a_pretrained_model_for_inference_V0_1_6.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/facebookresearch/vissl/blob/v0.1.6/tutorials/Using_a_pretrained_model_for_inference_V0_1_6.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -149,7 +139,7 @@
       "source": [
         "\n",
         "\n",
-        "## Download the ResNet-50 Simclr weights from the Model Zoo"
+        "## Download the ResNet-101 SimCLR weights from the Model Zoo"
       ]
     },
     {
@@ -162,6 +152,15 @@
       "source": [
         "!wget -q -O /content/resnet_simclr.torch https://dl.fbaipublicfiles.com/vissl/model_zoo/simclr_rn101_1000ep_simclr_8node_resnet_16_07_20.35063cea/model_final_checkpoint_phase999.torch"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Note**: You can use other SimCLR ResNet checkpoints from our [model zoo](https://github.com/facebookresearch/vissl/blob/main/MODEL_ZOO.md#SimCLR). "
+      ],
+      "metadata": {
+        "id": "3e5-CdzT71Fi"
+      }
     },
     {
       "cell_type": "markdown",
@@ -498,7 +497,6 @@
     "accelerator": "GPU",
     "colab": {
       "collapsed_sections": [],
-      "include_colab_link": true,
       "name": "Using a pretrained model for inference V0.1.6.ipynb",
       "provenance": []
     },
@@ -508,5 +506,5 @@
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 2
+  "nbformat_minor": 0
 }
