Export supervised vit

--- a/compvits/export_model.ipynb
+++ b/compvits/export_model.ipynb
@@ -12,10 +12,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Deit 3"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -57,10 +62,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### iBot"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -89,12 +99,105 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "save = {\"model\": new_checkpoint}\n",
-    "torch.save(save, \"../checkpoints/trunk_only/ibotb.pth\") #we use only trunks of ssl models, so we export it into 'checkpoints/trunk_only' directory"
-   ]
+    "torch.save(save, \"../checkpoints/trunk_only/ibotb.pth\") #we use only trunks of ssl models, so we export it into 'checkpoints/trunk_only' directory\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Supervised ViT/16\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [],
+   "source": [
+    "checkpoint = torch.hub.load_state_dict_from_url(\"https://github.com/huggingface/pytorch-image-models/releases/download/v0.1-weights/vit_base_p16_224-4e355ebd.pth\", map_location='cpu', check_hash=True)\n",
+    "\n",
+    "new_checkpoint = []\n",
+    "\n",
+    "for k in checkpoint:\n",
+    "    if not k.startswith(\"head.\"):\n",
+    "        new_k = \"trunk.\"+k\n",
+    "        new_checkpoint.append([new_k, checkpoint[k]])\n",
+    "    else:\n",
+    "        new_k = \"heads.0.clf.0.\"+k[len(\"head.\"):]\n",
+    "        new_checkpoint.append([new_k, checkpoint[k]])\n",
+    "\n",
+    "new_checkpoint = OrderedDict(new_checkpoint)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "odict_keys(['trunk.pos_embed', 'trunk.cls_token', 'trunk.patch_embed.proj.weight', 'trunk.patch_embed.proj.bias', 'trunk.blocks.0.norm1.weight', 'trunk.blocks.0.norm1.bias', 'trunk.blocks.0.attn.qkv.weight', 'trunk.blocks.0.attn.proj.weight', 'trunk.blocks.0.attn.proj.bias', 'trunk.blocks.0.norm2.weight', 'trunk.blocks.0.norm2.bias', 'trunk.blocks.0.mlp.fc1.weight', 'trunk.blocks.0.mlp.fc1.bias', 'trunk.blocks.0.mlp.fc2.weight', 'trunk.blocks.0.mlp.fc2.bias', 'trunk.blocks.1.norm1.weight', 'trunk.blocks.1.norm1.bias', 'trunk.blocks.1.attn.qkv.weight', 'trunk.blocks.1.attn.proj.weight', 'trunk.blocks.1.attn.proj.bias', 'trunk.blocks.1.norm2.weight', 'trunk.blocks.1.norm2.bias', 'trunk.blocks.1.mlp.fc1.weight', 'trunk.blocks.1.mlp.fc1.bias', 'trunk.blocks.1.mlp.fc2.weight', 'trunk.blocks.1.mlp.fc2.bias', 'trunk.blocks.2.norm1.weight', 'trunk.blocks.2.norm1.bias', 'trunk.blocks.2.attn.qkv.weight', 'trunk.blocks.2.attn.proj.weight', 'trunk.blocks.2.attn.proj.bias', 'trunk.blocks.2.norm2.weight', 'trunk.blocks.2.norm2.bias', 'trunk.blocks.2.mlp.fc1.weight', 'trunk.blocks.2.mlp.fc1.bias', 'trunk.blocks.2.mlp.fc2.weight', 'trunk.blocks.2.mlp.fc2.bias', 'trunk.blocks.3.norm1.weight', 'trunk.blocks.3.norm1.bias', 'trunk.blocks.3.attn.qkv.weight', 'trunk.blocks.3.attn.proj.weight', 'trunk.blocks.3.attn.proj.bias', 'trunk.blocks.3.norm2.weight', 'trunk.blocks.3.norm2.bias', 'trunk.blocks.3.mlp.fc1.weight', 'trunk.blocks.3.mlp.fc1.bias', 'trunk.blocks.3.mlp.fc2.weight', 'trunk.blocks.3.mlp.fc2.bias', 'trunk.blocks.4.norm1.weight', 'trunk.blocks.4.norm1.bias', 'trunk.blocks.4.attn.qkv.weight', 'trunk.blocks.4.attn.proj.weight', 'trunk.blocks.4.attn.proj.bias', 'trunk.blocks.4.norm2.weight', 'trunk.blocks.4.norm2.bias', 'trunk.blocks.4.mlp.fc1.weight', 'trunk.blocks.4.mlp.fc1.bias', 'trunk.blocks.4.mlp.fc2.weight', 'trunk.blocks.4.mlp.fc2.bias', 'trunk.blocks.5.norm1.weight', 'trunk.blocks.5.norm1.bias', 'trunk.blocks.5.attn.qkv.weight', 'trunk.blocks.5.attn.proj.weight', 'trunk.blocks.5.attn.proj.bias', 'trunk.blocks.5.norm2.weight', 'trunk.blocks.5.norm2.bias', 'trunk.blocks.5.mlp.fc1.weight', 'trunk.blocks.5.mlp.fc1.bias', 'trunk.blocks.5.mlp.fc2.weight', 'trunk.blocks.5.mlp.fc2.bias', 'trunk.blocks.6.norm1.weight', 'trunk.blocks.6.norm1.bias', 'trunk.blocks.6.attn.qkv.weight', 'trunk.blocks.6.attn.proj.weight', 'trunk.blocks.6.attn.proj.bias', 'trunk.blocks.6.norm2.weight', 'trunk.blocks.6.norm2.bias', 'trunk.blocks.6.mlp.fc1.weight', 'trunk.blocks.6.mlp.fc1.bias', 'trunk.blocks.6.mlp.fc2.weight', 'trunk.blocks.6.mlp.fc2.bias', 'trunk.blocks.7.norm1.weight', 'trunk.blocks.7.norm1.bias', 'trunk.blocks.7.attn.qkv.weight', 'trunk.blocks.7.attn.proj.weight', 'trunk.blocks.7.attn.proj.bias', 'trunk.blocks.7.norm2.weight', 'trunk.blocks.7.norm2.bias', 'trunk.blocks.7.mlp.fc1.weight', 'trunk.blocks.7.mlp.fc1.bias', 'trunk.blocks.7.mlp.fc2.weight', 'trunk.blocks.7.mlp.fc2.bias', 'trunk.blocks.8.norm1.weight', 'trunk.blocks.8.norm1.bias', 'trunk.blocks.8.attn.qkv.weight', 'trunk.blocks.8.attn.proj.weight', 'trunk.blocks.8.attn.proj.bias', 'trunk.blocks.8.norm2.weight', 'trunk.blocks.8.norm2.bias', 'trunk.blocks.8.mlp.fc1.weight', 'trunk.blocks.8.mlp.fc1.bias', 'trunk.blocks.8.mlp.fc2.weight', 'trunk.blocks.8.mlp.fc2.bias', 'trunk.blocks.9.norm1.weight', 'trunk.blocks.9.norm1.bias', 'trunk.blocks.9.attn.qkv.weight', 'trunk.blocks.9.attn.proj.weight', 'trunk.blocks.9.attn.proj.bias', 'trunk.blocks.9.norm2.weight', 'trunk.blocks.9.norm2.bias', 'trunk.blocks.9.mlp.fc1.weight', 'trunk.blocks.9.mlp.fc1.bias', 'trunk.blocks.9.mlp.fc2.weight', 'trunk.blocks.9.mlp.fc2.bias', 'trunk.blocks.10.norm1.weight', 'trunk.blocks.10.norm1.bias', 'trunk.blocks.10.attn.qkv.weight', 'trunk.blocks.10.attn.proj.weight', 'trunk.blocks.10.attn.proj.bias', 'trunk.blocks.10.norm2.weight', 'trunk.blocks.10.norm2.bias', 'trunk.blocks.10.mlp.fc1.weight', 'trunk.blocks.10.mlp.fc1.bias', 'trunk.blocks.10.mlp.fc2.weight', 'trunk.blocks.10.mlp.fc2.bias', 'trunk.blocks.11.norm1.weight', 'trunk.blocks.11.norm1.bias', 'trunk.blocks.11.attn.qkv.weight', 'trunk.blocks.11.attn.proj.weight', 'trunk.blocks.11.attn.proj.bias', 'trunk.blocks.11.norm2.weight', 'trunk.blocks.11.norm2.bias', 'trunk.blocks.11.mlp.fc1.weight', 'trunk.blocks.11.mlp.fc1.bias', 'trunk.blocks.11.mlp.fc2.weight', 'trunk.blocks.11.mlp.fc2.bias', 'trunk.norm.weight', 'trunk.norm.bias', 'heads.0.clf.0.weight', 'heads.0.clf.0.bias'])"
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_checkpoint.keys()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [],
+   "source": [
+    "save = {\"model\": new_checkpoint}\n",
+    "torch.save(save, \"../checkpoints/vit_supervised.pth\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
