--- a/compvits/export_model.ipynb
+++ b/compvits/export_model.ipynb
@@ -2,8 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -25,7 +29,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "checkpoint = torch.hub.load_state_dict_from_url(\"https://dl.fbaipublicfiles.com/deit/deit_3_base_224_1k.pth\", map_location='cpu', check_hash=True)\n",
@@ -44,7 +52,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "new_checkpoint.keys()"
@@ -53,7 +65,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "save = {\"model\": new_checkpoint}\n",
@@ -75,7 +91,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "checkpoint = torch.hub.load_state_dict_from_url(\"https://lf3-nlp-opensource.bytetos.com/obj/nlp-opensource/archive/2022/ibot/vitb_16/checkpoint_teacher.pth\", map_location='cpu', check_hash=True)\n",
@@ -90,7 +110,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "new_checkpoint.keys()"
@@ -125,10 +149,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "outputs": [],
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading: \"https://github.com/rwightman/pytorch-image-models/releases/download/v0.1-vitjx/jx_vit_base_p16_224-80ecf9dd.pth\" to /Users/piotrwojcik/.cache/torch/hub/checkpoints/jx_vit_base_p16_224-80ecf9dd.pth\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0.00/330M [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "6e7c6a9b011e4057aceda85f62e9154b"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "checkpoint = torch.hub.load_state_dict_from_url(\"https://github.com/huggingface/pytorch-image-models/releases/download/v0.1-weights/vit_base_p16_224-4e355ebd.pth\", map_location='cpu', check_hash=True)\n",
+    "checkpoint = torch.hub.load_state_dict_from_url('https://github.com/rwightman/pytorch-image-models/releases/download/v0.1-vitjx/jx_vit_base_p16_224-80ecf9dd.pth', map_location='cpu', check_hash=True)\n",
     "\n",
     "new_checkpoint = []\n",
     "\n",
@@ -151,13 +195,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
-      "text/plain": "odict_keys(['trunk.pos_embed', 'trunk.cls_token', 'trunk.patch_embed.proj.weight', 'trunk.patch_embed.proj.bias', 'trunk.blocks.0.norm1.weight', 'trunk.blocks.0.norm1.bias', 'trunk.blocks.0.attn.qkv.weight', 'trunk.blocks.0.attn.proj.weight', 'trunk.blocks.0.attn.proj.bias', 'trunk.blocks.0.norm2.weight', 'trunk.blocks.0.norm2.bias', 'trunk.blocks.0.mlp.fc1.weight', 'trunk.blocks.0.mlp.fc1.bias', 'trunk.blocks.0.mlp.fc2.weight', 'trunk.blocks.0.mlp.fc2.bias', 'trunk.blocks.1.norm1.weight', 'trunk.blocks.1.norm1.bias', 'trunk.blocks.1.attn.qkv.weight', 'trunk.blocks.1.attn.proj.weight', 'trunk.blocks.1.attn.proj.bias', 'trunk.blocks.1.norm2.weight', 'trunk.blocks.1.norm2.bias', 'trunk.blocks.1.mlp.fc1.weight', 'trunk.blocks.1.mlp.fc1.bias', 'trunk.blocks.1.mlp.fc2.weight', 'trunk.blocks.1.mlp.fc2.bias', 'trunk.blocks.2.norm1.weight', 'trunk.blocks.2.norm1.bias', 'trunk.blocks.2.attn.qkv.weight', 'trunk.blocks.2.attn.proj.weight', 'trunk.blocks.2.attn.proj.bias', 'trunk.blocks.2.norm2.weight', 'trunk.blocks.2.norm2.bias', 'trunk.blocks.2.mlp.fc1.weight', 'trunk.blocks.2.mlp.fc1.bias', 'trunk.blocks.2.mlp.fc2.weight', 'trunk.blocks.2.mlp.fc2.bias', 'trunk.blocks.3.norm1.weight', 'trunk.blocks.3.norm1.bias', 'trunk.blocks.3.attn.qkv.weight', 'trunk.blocks.3.attn.proj.weight', 'trunk.blocks.3.attn.proj.bias', 'trunk.blocks.3.norm2.weight', 'trunk.blocks.3.norm2.bias', 'trunk.blocks.3.mlp.fc1.weight', 'trunk.blocks.3.mlp.fc1.bias', 'trunk.blocks.3.mlp.fc2.weight', 'trunk.blocks.3.mlp.fc2.bias', 'trunk.blocks.4.norm1.weight', 'trunk.blocks.4.norm1.bias', 'trunk.blocks.4.attn.qkv.weight', 'trunk.blocks.4.attn.proj.weight', 'trunk.blocks.4.attn.proj.bias', 'trunk.blocks.4.norm2.weight', 'trunk.blocks.4.norm2.bias', 'trunk.blocks.4.mlp.fc1.weight', 'trunk.blocks.4.mlp.fc1.bias', 'trunk.blocks.4.mlp.fc2.weight', 'trunk.blocks.4.mlp.fc2.bias', 'trunk.blocks.5.norm1.weight', 'trunk.blocks.5.norm1.bias', 'trunk.blocks.5.attn.qkv.weight', 'trunk.blocks.5.attn.proj.weight', 'trunk.blocks.5.attn.proj.bias', 'trunk.blocks.5.norm2.weight', 'trunk.blocks.5.norm2.bias', 'trunk.blocks.5.mlp.fc1.weight', 'trunk.blocks.5.mlp.fc1.bias', 'trunk.blocks.5.mlp.fc2.weight', 'trunk.blocks.5.mlp.fc2.bias', 'trunk.blocks.6.norm1.weight', 'trunk.blocks.6.norm1.bias', 'trunk.blocks.6.attn.qkv.weight', 'trunk.blocks.6.attn.proj.weight', 'trunk.blocks.6.attn.proj.bias', 'trunk.blocks.6.norm2.weight', 'trunk.blocks.6.norm2.bias', 'trunk.blocks.6.mlp.fc1.weight', 'trunk.blocks.6.mlp.fc1.bias', 'trunk.blocks.6.mlp.fc2.weight', 'trunk.blocks.6.mlp.fc2.bias', 'trunk.blocks.7.norm1.weight', 'trunk.blocks.7.norm1.bias', 'trunk.blocks.7.attn.qkv.weight', 'trunk.blocks.7.attn.proj.weight', 'trunk.blocks.7.attn.proj.bias', 'trunk.blocks.7.norm2.weight', 'trunk.blocks.7.norm2.bias', 'trunk.blocks.7.mlp.fc1.weight', 'trunk.blocks.7.mlp.fc1.bias', 'trunk.blocks.7.mlp.fc2.weight', 'trunk.blocks.7.mlp.fc2.bias', 'trunk.blocks.8.norm1.weight', 'trunk.blocks.8.norm1.bias', 'trunk.blocks.8.attn.qkv.weight', 'trunk.blocks.8.attn.proj.weight', 'trunk.blocks.8.attn.proj.bias', 'trunk.blocks.8.norm2.weight', 'trunk.blocks.8.norm2.bias', 'trunk.blocks.8.mlp.fc1.weight', 'trunk.blocks.8.mlp.fc1.bias', 'trunk.blocks.8.mlp.fc2.weight', 'trunk.blocks.8.mlp.fc2.bias', 'trunk.blocks.9.norm1.weight', 'trunk.blocks.9.norm1.bias', 'trunk.blocks.9.attn.qkv.weight', 'trunk.blocks.9.attn.proj.weight', 'trunk.blocks.9.attn.proj.bias', 'trunk.blocks.9.norm2.weight', 'trunk.blocks.9.norm2.bias', 'trunk.blocks.9.mlp.fc1.weight', 'trunk.blocks.9.mlp.fc1.bias', 'trunk.blocks.9.mlp.fc2.weight', 'trunk.blocks.9.mlp.fc2.bias', 'trunk.blocks.10.norm1.weight', 'trunk.blocks.10.norm1.bias', 'trunk.blocks.10.attn.qkv.weight', 'trunk.blocks.10.attn.proj.weight', 'trunk.blocks.10.attn.proj.bias', 'trunk.blocks.10.norm2.weight', 'trunk.blocks.10.norm2.bias', 'trunk.blocks.10.mlp.fc1.weight', 'trunk.blocks.10.mlp.fc1.bias', 'trunk.blocks.10.mlp.fc2.weight', 'trunk.blocks.10.mlp.fc2.bias', 'trunk.blocks.11.norm1.weight', 'trunk.blocks.11.norm1.bias', 'trunk.blocks.11.attn.qkv.weight', 'trunk.blocks.11.attn.proj.weight', 'trunk.blocks.11.attn.proj.bias', 'trunk.blocks.11.norm2.weight', 'trunk.blocks.11.norm2.bias', 'trunk.blocks.11.mlp.fc1.weight', 'trunk.blocks.11.mlp.fc1.bias', 'trunk.blocks.11.mlp.fc2.weight', 'trunk.blocks.11.mlp.fc2.bias', 'trunk.norm.weight', 'trunk.norm.bias', 'heads.0.clf.0.weight', 'heads.0.clf.0.bias'])"
+      "text/plain": "odict_keys(['trunk.cls_token', 'trunk.norm.bias', 'trunk.norm.weight', 'trunk.blocks.0.norm1.bias', 'trunk.blocks.0.norm1.weight', 'trunk.blocks.0.norm2.bias', 'trunk.blocks.0.norm2.weight', 'trunk.blocks.0.mlp.fc1.bias', 'trunk.blocks.0.mlp.fc1.weight', 'trunk.blocks.0.mlp.fc2.bias', 'trunk.blocks.0.mlp.fc2.weight', 'trunk.blocks.0.attn.proj.bias', 'trunk.blocks.0.attn.proj.weight', 'trunk.blocks.0.attn.qkv.bias', 'trunk.blocks.0.attn.qkv.weight', 'trunk.blocks.1.norm1.bias', 'trunk.blocks.1.norm1.weight', 'trunk.blocks.1.norm2.bias', 'trunk.blocks.1.norm2.weight', 'trunk.blocks.1.mlp.fc1.bias', 'trunk.blocks.1.mlp.fc1.weight', 'trunk.blocks.1.mlp.fc2.bias', 'trunk.blocks.1.mlp.fc2.weight', 'trunk.blocks.1.attn.proj.bias', 'trunk.blocks.1.attn.proj.weight', 'trunk.blocks.1.attn.qkv.bias', 'trunk.blocks.1.attn.qkv.weight', 'trunk.blocks.10.norm1.bias', 'trunk.blocks.10.norm1.weight', 'trunk.blocks.10.norm2.bias', 'trunk.blocks.10.norm2.weight', 'trunk.blocks.10.mlp.fc1.bias', 'trunk.blocks.10.mlp.fc1.weight', 'trunk.blocks.10.mlp.fc2.bias', 'trunk.blocks.10.mlp.fc2.weight', 'trunk.blocks.10.attn.proj.bias', 'trunk.blocks.10.attn.proj.weight', 'trunk.blocks.10.attn.qkv.bias', 'trunk.blocks.10.attn.qkv.weight', 'trunk.blocks.11.norm1.bias', 'trunk.blocks.11.norm1.weight', 'trunk.blocks.11.norm2.bias', 'trunk.blocks.11.norm2.weight', 'trunk.blocks.11.mlp.fc1.bias', 'trunk.blocks.11.mlp.fc1.weight', 'trunk.blocks.11.mlp.fc2.bias', 'trunk.blocks.11.mlp.fc2.weight', 'trunk.blocks.11.attn.proj.bias', 'trunk.blocks.11.attn.proj.weight', 'trunk.blocks.11.attn.qkv.bias', 'trunk.blocks.11.attn.qkv.weight', 'trunk.blocks.2.norm1.bias', 'trunk.blocks.2.norm1.weight', 'trunk.blocks.2.norm2.bias', 'trunk.blocks.2.norm2.weight', 'trunk.blocks.2.mlp.fc1.bias', 'trunk.blocks.2.mlp.fc1.weight', 'trunk.blocks.2.mlp.fc2.bias', 'trunk.blocks.2.mlp.fc2.weight', 'trunk.blocks.2.attn.proj.bias', 'trunk.blocks.2.attn.proj.weight', 'trunk.blocks.2.attn.qkv.bias', 'trunk.blocks.2.attn.qkv.weight', 'trunk.blocks.3.norm1.bias', 'trunk.blocks.3.norm1.weight', 'trunk.blocks.3.norm2.bias', 'trunk.blocks.3.norm2.weight', 'trunk.blocks.3.mlp.fc1.bias', 'trunk.blocks.3.mlp.fc1.weight', 'trunk.blocks.3.mlp.fc2.bias', 'trunk.blocks.3.mlp.fc2.weight', 'trunk.blocks.3.attn.proj.bias', 'trunk.blocks.3.attn.proj.weight', 'trunk.blocks.3.attn.qkv.bias', 'trunk.blocks.3.attn.qkv.weight', 'trunk.blocks.4.norm1.bias', 'trunk.blocks.4.norm1.weight', 'trunk.blocks.4.norm2.bias', 'trunk.blocks.4.norm2.weight', 'trunk.blocks.4.mlp.fc1.bias', 'trunk.blocks.4.mlp.fc1.weight', 'trunk.blocks.4.mlp.fc2.bias', 'trunk.blocks.4.mlp.fc2.weight', 'trunk.blocks.4.attn.proj.bias', 'trunk.blocks.4.attn.proj.weight', 'trunk.blocks.4.attn.qkv.bias', 'trunk.blocks.4.attn.qkv.weight', 'trunk.blocks.5.norm1.bias', 'trunk.blocks.5.norm1.weight', 'trunk.blocks.5.norm2.bias', 'trunk.blocks.5.norm2.weight', 'trunk.blocks.5.mlp.fc1.bias', 'trunk.blocks.5.mlp.fc1.weight', 'trunk.blocks.5.mlp.fc2.bias', 'trunk.blocks.5.mlp.fc2.weight', 'trunk.blocks.5.attn.proj.bias', 'trunk.blocks.5.attn.proj.weight', 'trunk.blocks.5.attn.qkv.bias', 'trunk.blocks.5.attn.qkv.weight', 'trunk.blocks.6.norm1.bias', 'trunk.blocks.6.norm1.weight', 'trunk.blocks.6.norm2.bias', 'trunk.blocks.6.norm2.weight', 'trunk.blocks.6.mlp.fc1.bias', 'trunk.blocks.6.mlp.fc1.weight', 'trunk.blocks.6.mlp.fc2.bias', 'trunk.blocks.6.mlp.fc2.weight', 'trunk.blocks.6.attn.proj.bias', 'trunk.blocks.6.attn.proj.weight', 'trunk.blocks.6.attn.qkv.bias', 'trunk.blocks.6.attn.qkv.weight', 'trunk.blocks.7.norm1.bias', 'trunk.blocks.7.norm1.weight', 'trunk.blocks.7.norm2.bias', 'trunk.blocks.7.norm2.weight', 'trunk.blocks.7.mlp.fc1.bias', 'trunk.blocks.7.mlp.fc1.weight', 'trunk.blocks.7.mlp.fc2.bias', 'trunk.blocks.7.mlp.fc2.weight', 'trunk.blocks.7.attn.proj.bias', 'trunk.blocks.7.attn.proj.weight', 'trunk.blocks.7.attn.qkv.bias', 'trunk.blocks.7.attn.qkv.weight', 'trunk.blocks.8.norm1.bias', 'trunk.blocks.8.norm1.weight', 'trunk.blocks.8.norm2.bias', 'trunk.blocks.8.norm2.weight', 'trunk.blocks.8.mlp.fc1.bias', 'trunk.blocks.8.mlp.fc1.weight', 'trunk.blocks.8.mlp.fc2.bias', 'trunk.blocks.8.mlp.fc2.weight', 'trunk.blocks.8.attn.proj.bias', 'trunk.blocks.8.attn.proj.weight', 'trunk.blocks.8.attn.qkv.bias', 'trunk.blocks.8.attn.qkv.weight', 'trunk.blocks.9.norm1.bias', 'trunk.blocks.9.norm1.weight', 'trunk.blocks.9.norm2.bias', 'trunk.blocks.9.norm2.weight', 'trunk.blocks.9.mlp.fc1.bias', 'trunk.blocks.9.mlp.fc1.weight', 'trunk.blocks.9.mlp.fc2.bias', 'trunk.blocks.9.mlp.fc2.weight', 'trunk.blocks.9.attn.proj.bias', 'trunk.blocks.9.attn.proj.weight', 'trunk.blocks.9.attn.qkv.bias', 'trunk.blocks.9.attn.qkv.weight', 'trunk.pos_embed', 'trunk.patch_embed.proj.bias', 'trunk.patch_embed.proj.weight', 'heads.0.clf.0.bias', 'heads.0.clf.0.weight'])"
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "save = {\"model\": new_checkpoint}\n",
