--- a/compvits/export_model.ipynb
+++ b/compvits/export_model.ipynb
@@ -158,6 +158,164 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "checkpoint = torch.hub.load_state_dict_from_url('https://dl.fbaipublicfiles.com/dino/dino_vitbase16_pretrain/dino_vitbase16_pretrain.pth', map_location='cpu', check_hash=True)\n",
+    "\n",
+    "new_checkpoint = []\n",
+    "\n",
+    "for k in checkpoint:\n",
+    "    if not k.startswith(\"head.\"):\n",
+    "        new_k = \"trunk.\"+k\n",
+    "        new_checkpoint.append([new_k, checkpoint[k]])\n",
+    "    else:\n",
+    "        new_k = \"heads.0.clf.0.\"+k[len(\"head.\"):]\n",
+    "        new_checkpoint.append([new_k, checkpoint[k]])\n",
+    "\n",
+    "new_checkpoint = OrderedDict(new_checkpoint)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "new_checkpoint.keys()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "save = {\"model\": new_checkpoint}\n",
+    "torch.save(save, \"../checkpoints/dino.pth\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Supervised ViT/16\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "checkpoint = torch.hub.load_state_dict_from_url('https://github.com/rwightman/pytorch-image-models/releases/download/v0.1-vitjx/jx_vit_base_p16_224-80ecf9dd.pth', map_location='cpu', check_hash=True)\n",
+    "\n",
+    "new_checkpoint = []\n",
+    "\n",
+    "for k in checkpoint:\n",
+    "    if not k.startswith(\"head.\"):\n",
+    "        new_k = \"trunk.\"+k\n",
+    "        new_checkpoint.append([new_k, checkpoint[k]])\n",
+    "    else:\n",
+    "        new_k = \"heads.0.clf.0.\"+k[len(\"head.\"):]\n",
+    "        new_checkpoint.append([new_k, checkpoint[k]])\n",
+    "\n",
+    "new_checkpoint = OrderedDict(new_checkpoint)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "new_checkpoint.keys()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "save = {\"model\": new_checkpoint}\n",
+    "torch.save(save, \"../checkpoints/vit_supervised.pth\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### DINO ViT/16\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "outputs": [
     {
