--- a/compvits/export_model.ipynb
+++ b/compvits/export_model.ipynb
@@ -3,11 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
@@ -15,14 +11,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Deit 3"
    ]
@@ -30,11 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "checkpoint = torch.hub.load_state_dict_from_url(\"https://dl.fbaipublicfiles.com/deit/deit_3_base_224_1k.pth\", map_location='cpu', check_hash=True)\n",
@@ -53,11 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "new_checkpoint.keys()"
@@ -66,11 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "save = {\"model\": new_checkpoint}\n",
@@ -79,12 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "### iBot"
    ]
@@ -92,11 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "checkpoint = torch.hub.load_state_dict_from_url(\"https://lf3-nlp-opensource.bytetos.com/obj/nlp-opensource/archive/2022/ibot/vitb_16/checkpoint_teacher.pth\", map_location='cpu', check_hash=True)\n",
@@ -111,11 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "new_checkpoint.keys()"
@@ -124,282 +89,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "save = {\"model\": new_checkpoint}\n",
-    "torch.save(save, \"../checkpoints/trunk_only/ibotb.pth\") #we use only trunks of ssl models, so we export it into 'checkpoints/trunk_only' directory\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "### DINO ViT/16\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "checkpoint = torch.hub.load_state_dict_from_url('https://dl.fbaipublicfiles.com/dino/dino_vitbase16_pretrain/dino_vitbase16_pretrain.pth', map_location='cpu', check_hash=True)\n",
-    "\n",
-    "new_checkpoint = []\n",
-    "\n",
-    "for k in checkpoint:\n",
-    "    if not k.startswith(\"head.\"):\n",
-    "        new_k = \"trunk.\"+k\n",
-    "        new_checkpoint.append([new_k, checkpoint[k]])\n",
-    "    else:\n",
-    "        new_k = \"heads.0.clf.0.\"+k[len(\"head.\"):]\n",
-    "        new_checkpoint.append([new_k, checkpoint[k]])\n",
-    "\n",
-    "new_checkpoint = OrderedDict(new_checkpoint)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "new_checkpoint.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "save = {\"model\": new_checkpoint}\n",
-    "torch.save(save, \"../checkpoints/dino.pth\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "### Supervised ViT/16\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "checkpoint = torch.hub.load_state_dict_from_url('https://github.com/rwightman/pytorch-image-models/releases/download/v0.1-vitjx/jx_vit_base_p16_224-80ecf9dd.pth', map_location='cpu', check_hash=True)\n",
-    "\n",
-    "new_checkpoint = []\n",
-    "\n",
-    "for k in checkpoint:\n",
-    "    if not k.startswith(\"head.\"):\n",
-    "        new_k = \"trunk.\"+k\n",
-    "        new_checkpoint.append([new_k, checkpoint[k]])\n",
-    "    else:\n",
-    "        new_k = \"heads.0.clf.0.\"+k[len(\"head.\"):]\n",
-    "        new_checkpoint.append([new_k, checkpoint[k]])\n",
-    "\n",
-    "new_checkpoint = OrderedDict(new_checkpoint)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "new_checkpoint.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "save = {\"model\": new_checkpoint}\n",
-    "torch.save(save, \"../checkpoints/vit_supervised.pth\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "### DINO ViT/16\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "checkpoint = torch.hub.load_state_dict_from_url('https://dl.fbaipublicfiles.com/dino/dino_vitbase16_pretrain/dino_vitbase16_pretrain.pth', map_location='cpu', check_hash=True)\n",
-    "\n",
-    "new_checkpoint = []\n",
-    "\n",
-    "for k in checkpoint:\n",
-    "    if not k.startswith(\"head.\"):\n",
-    "        new_k = \"trunk.\"+k\n",
-    "        new_checkpoint.append([new_k, checkpoint[k]])\n",
-    "    else:\n",
-    "        new_k = \"heads.0.clf.0.\"+k[len(\"head.\"):]\n",
-    "        new_checkpoint.append([new_k, checkpoint[k]])\n",
-    "\n",
-    "new_checkpoint = OrderedDict(new_checkpoint)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "new_checkpoint.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "save = {\"model\": new_checkpoint}\n",
-    "torch.save(save, \"../checkpoints/dino.pth\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "### Supervised ViT/16\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "checkpoint = torch.hub.load_state_dict_from_url('https://github.com/rwightman/pytorch-image-models/releases/download/v0.1-vitjx/jx_vit_base_p16_224-80ecf9dd.pth', map_location='cpu', check_hash=True)\n",
-    "\n",
-    "new_checkpoint = []\n",
-    "\n",
-    "for k in checkpoint:\n",
-    "    if not k.startswith(\"head.\"):\n",
-    "        new_k = \"trunk.\"+k\n",
-    "        new_checkpoint.append([new_k, checkpoint[k]])\n",
-    "    else:\n",
-    "        new_k = \"heads.0.clf.0.\"+k[len(\"head.\"):]\n",
-    "        new_checkpoint.append([new_k, checkpoint[k]])\n",
-    "\n",
-    "new_checkpoint = OrderedDict(new_checkpoint)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "new_checkpoint.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "save = {\"model\": new_checkpoint}\n",
-    "torch.save(save, \"../checkpoints/vit_supervised.pth\")"
+    "torch.save(save, \"../checkpoints/trunk_only/ibotb.pth\") #we use only trunks of ssl models, so we export it into 'checkpoints/trunk_only' directory"
    ]
   }
  ],
@@ -420,7 +114,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.17"
-  }
+  },
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
